# Space-Settler-BigBang

./: .appveyor.yml  .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  diesel.toml  index.html  search-index.js  travis-helper.sh
bigbang/: Cargo.toml  index.html  sidebar-items.js  struct.Stats.html
bigbang/consts/: constant.AU.html  constant.BOLTZ.html  constant.C.html  constant.CH_LIMIT.html  constant.EARTH_ATM_PRESSURE.html  constant.EARTH_MASS.html  constant.EARTH_RADIUS.html  constant.G.html  constant.JUPITER_MASS.html  constant.JUPITER_RADIUS.html  constant.SUN_LUMINOSITY.html  constant.SUN_MASS.html  constant.SUN_RADIUS.html  index.html  sidebar-items.js
bigbang/planet/: enum.PlanetType.html  index.html  sidebar-items.js  struct.Atmosphere.html  struct.Orbit.html  struct.Planet.html  struct.Surface.html
bigbang/src/: cli.rs  lib.rs  main.rs  planet.rs  star.rs  utils.rs
bigbang/star/: enum.StarClass.html  index.html  sidebar-items.js  struct.Star.html
bigbang/utils/: fn.can_water_be_ice.html  fn.can_water_be_liquid.html  fn.celsius_to_kelvin.html  fn.deg_to_rad.html  fn.kelvin_to_celsius.html  fn.rad_to_deg.html  index.html  sidebar-items.js
db/: Cargo.toml
db/src/: lib.rs  planets.rs  schema.rs  stars.rs  users.rs
implementors/core/cmp/: trait.PartialEq.js
implementors/core/fmt/: trait.Debug.js
migrations/2018-12-26-190640_create_users_table/: down.sql  up.sql
migrations/2019-01-02-204809_galaxy_structure/: down.sql  up.sql
rand/: struct.AsciiGenerator.html  struct.Generator.html
src/: cli.rs  consts.rs  main.rs  planet.rs  star.rs  utils.rs
src/bigbang/: consts.rs.html  main.rs.html  planet.rs.html  star.rs.html  utils.rs.html
src/entities/: body.rs  mod.rs  star.rs
web/: Cargo.toml  README.md  build.rs  package-lock.json  package.json  webpack.config.js
web/src/: compress.rs  lib.rs  main.rs  templates.rs
web/src/templates/: footer.rs  header.rs  home.rs
web/static/css/: style.scss
web/static/css/_common/: bootstrap.scss  settings.scss
web/static/js/: script.js
