[package]
name = "bigbang"
version = "0.0.2"
authors = ["Razican <razican@protonmail.ch>"]
license = "BSD 3-Clause License"
readme = "README.md"
repository = "https://github.com/Razican/Space-Settler-BigBang"
description = """
Big-Bang generator for Space Settler.
"""

[dependencies]
failure = "0.1.1"
clap = "2.31.2"
colored = "1.6.0"
num_cpus = "1.8.0"
rand = "0.5.0-pre.1"

# The release profile, used for `cargo build`.
[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 1
panic = 'unwind'

# The release profile, used for `cargo build --release`.
[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
panic = 'unwind'
