[package]
name = "sps_db"
version = "0.1.0"
authors = ["Razican <razican@protonmail.ch>"]
edition = "2018"
license = "GPL-3.0"
repository = "https://github.com/Razican/Space-Settler-BigBang"
description = """
Big-Bang database access crate
"""

[dependencies.diesel]
version = "1.4.1"
features = ["postgres", "uuid", "chrono", "64-column-tables"]
